--- a/contact.html
+++ b/contact.html
@@ -138,5 +138,24 @@
         <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
         <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
         <script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
+
+        <!-- Default Statcounter code for My Portfolio
+        https://hamza-shakir.github.io/ -->
+        <script type="text/javascript">
+            var sc_project=13010332; 
+            var sc_invisible=1; 
+            var sc_security="7155895a"; 
+        </script>
+        <script type="text/javascript"
+            src="https://www.statcounter.com/counter/counter.js"
+            async>
+        </script>
+        <noscript><div class="statcounter"><a title="web stats"
+        href="https://statcounter.com/" target="_blank"><img
+        class="statcounter"
+        src="https://c.statcounter.com/13010332/0/7155895a/1/"
+        alt="web stats"
+        referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+        <!-- End of Statcounter Code -->
     </body>
 </html>
