--- a/index.html
+++ b/index.html
@@ -222,5 +222,24 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+
+        <!-- Default Statcounter code for My Portfolio
+        https://hamza-shakir.github.io/ -->
+        <script type="text/javascript">
+            var sc_project=13010332; 
+            var sc_invisible=1; 
+            var sc_security="7155895a"; 
+        </script>
+        <script type="text/javascript"
+            src="https://www.statcounter.com/counter/counter.js"
+            async>
+        </script>
+        <noscript><div class="statcounter"><a title="web stats"
+        href="https://statcounter.com/" target="_blank"><img
+        class="statcounter"
+        src="https://c.statcounter.com/13010332/0/7155895a/1/"
+        alt="web stats"
+        referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
+        <!-- End of Statcounter Code -->
     </body>
 </html>
