updated resume and other text under work exp

--- a/projects.html
+++ b/projects.html
@@ -57,8 +57,8 @@
                                                 <p>→ Building an <strong>interactive app</strong> designed for data enthusiasts and analysts eager to master the
                                                     <strong>psychology of data visualization</strong>. <br><br>
                                                     → Our app guides users in presenting their insights visually, ensuring optimal clarity and impact across
-                                                    all business domains.<br><br>
-                                                    → With tailored recommendations, practical use cases, and examples, it equips you with the knowledge
+                                                    <strong>all business domains</strong>.<br><br>
+                                                    → With <strong>tailored recommendations, practical use cases, and examples</strong>, it equips you with the knowledge
                                                     to communicate data effectively and efficiently.</p>
                                             </div>
                                             <!-- <img class="img-fluid" src="assets/" alt="..." /> -->
@@ -99,7 +99,7 @@
                                                 <h2 class="fw-bolder">Int'l Football Tournaments Interactive Dashboard</h2><br>
                                                 <p>→ Analyzed data from the past 100 years of major international football tournaments to assess the
                                                     impact of home advantage using <strong>Python and various data viz libraries</strong>.<br><br>
-                                                    → Developed a <strong>live interactive dashboard</strong>strong> for users to explore insights and interact with 
+                                                    → Developed a <strong>live interactive dashboard</strong> for users to explore insights and interact with 
                                                     additional football data.<br><br>
                                                     → Provided comprehensive findings on the host nation's performances and facilitated user-driven
                                                     exploration of miscellaneous football statistics.<br><br>
@@ -123,13 +123,13 @@
                                         <div class="d-flex align-items-center">
                                             <div class="p-5">
                                                 <h2 class="fw-bolder">DM Cruiser - A LinkedIn Chrome Extension</h2><br>
-                                                <p>→ Developed a Chrome extension to automate the scraping of LinkedIn leads, 
+                                                <p>→ Developed a Chrome extension to <strong>automate the scraping of LinkedIn leads</strong>, 
                                                     streamlining the process of collecting potential connections for personal 
-                                                    or professional outreach.</strong>.<br><br>
-                                                    → Implemented functionality to send automated connection invites with the 
-                                                    option to include personalized messages, enhancing response rates and engagement.<br><br>
+                                                    or professional outreach..<br><br>
+                                                    → Implemented functionality to send <strong>automated connection invites</strong> with the 
+                                                    option to include <strong>personalized messages</strong>, enhancing response rates and engagement.<br><br>
                                                     → Designed the extension to be user-friendly, requiring minimal user input 
-                                                    while handling complex operations, thus improving efficiency and productivity for end-users.<br><br>
+                                                    while handling complex operations, thus <strong>improving efficiency and productivity for end-users</strong>.<br><br>
                                                     → <a href="https://github.com/fauwaazashal/DM-Cruiser" target="_blank" 
                                                     style="font-weight: bold;">GitHub Repo</a>
                                                 </p>
