--- a/resume.html
+++ b/resume.html
@@ -62,13 +62,15 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">May '24 - Jun '24</div>
-                                                <div class="small fw-bolder">CRM Analyst | Pre-Sales</div>
+                                                <div class="small fw-bolder">Business Data Analyst</div>
                                                 <div class="small text-muted">Cyber Heals</div>
                                                 <!-- <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
                                         <div class="col-lg-8">
-                                            <div>→ Integrated and cleaned data from multiple sources into Freshworks Sales CRM, 
+                                            <div>→ Analyzed company email campaign performance and delivered 
+                                                data-driven insights to inform strategic decisions.<br><br>
+                                                → Integrated and cleaned data from multiple sources into Freshworks Sales CRM, 
                                                 streamlining the sales pipeline and saving several hours of manual work.<br><br>
                                                 → Developed Python scripts to automate data extraction for research and repetitive 
                                                 tasks, saving hours of manual work.<br><br>
@@ -86,15 +88,13 @@
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Apr '24 - Jun '24</div>
-                                                <div class="small fw-bolder">Marketing Research Analyst | Pre-Sales</div>
+                                                <div class="small fw-bolder">Market Research Analyst</div>
                                                 <div class="small text-muted">Cyber Heals</div>
                                                 <!-- <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
                                         <div class="col-lg-8">
-                                            <div>→ Analyzed company email campaign performance and delivered 
-                                                data-driven insights to inform strategic decisions.<br><br>
-                                                → Analyzed performance of the company's and CEO's social media over the last few months.<br><br>
+                                            <div>→ Analyzed performance of the company's and CEO's social media over the last few months.<br><br>
                                                 → Conducted extensive research and analyzed competitors and audiences across various social
                                                 platforms.<br><br>
                                                 → Created reports and suggested optimal strategies based on the analysis to improve
