updating work exp

--- a/resume.html
+++ b/resume.html
@@ -61,8 +61,8 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">May '24 - Jun '24</div>
-                                                <div class="small fw-bolder">Business Data Analyst</div>
+                                                <div class="text-primary fw-bolder mb-2">Jul '24 - Present</div>
+                                                <div class="small fw-bolder">Data Analyst & Growth Specialist</div>
                                                 <div class="small text-muted">Cyber Heals</div>
                                                 <!-- <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
@@ -87,6 +87,32 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
+                                                <div class="text-primary fw-bolder mb-2">May '24 - Jun '24</div>
+                                                <div class="small fw-bolder">Business Data Analyst</div>
+                                                <div class="small text-muted">Cyber Heals</div>
+                                                <!-- <div class="small text-muted">Gotham City, NY</div> -->
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-8">
+                                            <div>→ Analyzed company email campaign performance and delivered 
+                                                data-driven insights to inform strategic decisions.<br><br>
+                                                → Integrated and cleaned data from multiple sources into Freshworks Sales CRM, 
+                                                streamlining the sales pipeline and saving several hours of manual work.<br><br>
+                                                → Developed Python scripts to automate data extraction for research and repetitive 
+                                                tasks, saving hours of manual work.<br><br>
+                                                → Created reports/dashboards within the CRM to measure various sales metrics.<br><br>
+                                                → Assisted the sales team by drafting proposals for clientele.
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- Experience Card 3-->
+                            <div class="card shadow border-0 rounded-4 mb-5">
+                                <div class="card-body p-5">
+                                    <div class="row align-items-center gx-5">
+                                        <div class="col text-center text-lg-start mb-4 mb-lg-0">
+                                            <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Apr '24 - Jun '24</div>
                                                 <div class="small fw-bolder">Market Research Analyst</div>
                                                 <div class="small text-muted">Cyber Heals</div>
@@ -106,7 +132,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Experience Card 3-->
+                            <!-- Experience Card 4-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
@@ -129,7 +155,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <!-- Experience Card 4-->
+                            <!-- Experience Card 5-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
