updated experience and skils section

--- a/resume.html
+++ b/resume.html
@@ -50,7 +50,7 @@
                                 <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                                 <!-- Download resume button-->
                                 <!-- Note: Set the link href target to a PDF file within your project-->
-                                <a class="btn btn-primary px-4 py-3" href="/assets/Hamza_Data Analyst_Resume.pdf" target="_blank">
+                                <a class="btn btn-primary px-4 py-3" href="/assets/Hamza_DataAnalyst_Resume.pdf" target="_blank">
                                     <div class="d-inline-block bi bi-download me-2"></div>
                                     Download Resume
                                 </a>
@@ -68,14 +68,15 @@
                                             </div>
                                         </div>
                                         <div class="col-lg-8">
-                                            <div>→ Analyzed company email campaign performance and delivered 
-                                                data-driven insights to inform strategic decisions.<br><br>
-                                                → Integrated and cleaned data from multiple sources into Freshworks Sales CRM, 
-                                                streamlining the sales pipeline and saving several hours of manual work.<br><br>
-                                                → Developed Python scripts to automate data extraction for research and repetitive 
-                                                tasks, saving hours of manual work.<br><br>
-                                                → Created reports/dashboards within the CRM to measure various sales metrics.<br><br>
-                                                → Assisted the sales team by drafting proposals for clientele.
+                                            <div>→ Led data-driven lead generation and outbound email campaigns, 
+                                                optimizing outreach with A/Btesting to boost engagement and sales conversions.<br><br>
+                                                → Analyzed campaign performance metrics to enhance lead nurturing 
+                                                and consistently drive qualified leads into the sales pipeline<br><br>
+                                                → Managed CRM systems for data accuracy, providing insights 
+                                                to support sales & marketing team efforts.<br><br>
+                                                → Wrote python scripts to automate tasks, saving hours of manual and repetitive work<br><br>
+                                                → Supported cross-functional teams with data-driven insights for 
+                                                informed decision-making and performance optimization.
                                             </div>
                                         </div>
                                     </div>
@@ -87,20 +88,16 @@
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
-                                                <div class="text-primary fw-bolder mb-2">May '24 - Jun '24</div>
+                                                <div class="text-primary fw-bolder mb-2">Apr '24 - Jun '24</div>
                                                 <div class="small fw-bolder">Business Data Analyst</div>
                                                 <div class="small text-muted">Cyber Heals</div>
                                                 <!-- <div class="small text-muted">Gotham City, NY</div> -->
                                             </div>
                                         </div>
                                         <div class="col-lg-8">
-                                            <div>→ Analyzed company email campaign performance and delivered 
-                                                data-driven insights to inform strategic decisions.<br><br>
-                                                → Integrated and cleaned data from multiple sources into Freshworks Sales CRM, 
-                                                streamlining the sales pipeline and saving several hours of manual work.<br><br>
-                                                → Developed Python scripts to automate data extraction for research and repetitive 
-                                                tasks, saving hours of manual work.<br><br>
-                                                → Created reports/dashboards within the CRM to measure various sales metrics.<br><br>
+                                            <div>→ Managed CRM systems for data accuracy, providing insights to support sales team efforts.<br><br>
+                                                → Wrote python scripts to automate tasks, saving hours of manual and repetitive work<br><br>
+                                                → Created reports/dashboards within the CRM to measure various sales metrics and performances<br><br>
                                                 → Assisted the sales team by drafting proposals for clientele.
                                             </div>
                                         </div>
@@ -108,16 +105,16 @@
                                 </div>
                             </div>
                             <!-- Experience Card 3-->
-                            <div class="card shadow border-0 rounded-4 mb-5">
+                            <!-- <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
                                     <div class="row align-items-center gx-5">
                                         <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                             <div class="bg-light p-4 rounded-4">
                                                 <div class="text-primary fw-bolder mb-2">Apr '24 - Jun '24</div>
                                                 <div class="small fw-bolder">Market Research Analyst</div>
-                                                <div class="small text-muted">Cyber Heals</div>
+                                                <div class="small text-muted">Cyber Heals</div> -->
                                                 <!-- <div class="small text-muted">Gotham City, NY</div> -->
-                                            </div>
+                                            <!-- </div>
                                         </div>
                                         <div class="col-lg-8">
                                             <div>→ Analyzed performance of the company's and CEO's social media over the last few months.<br><br>
@@ -131,7 +128,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- Experience Card 4-->
                             <div class="card shadow border-0 rounded-4 mb-5">
                                 <div class="card-body p-5">
@@ -237,14 +234,14 @@
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Dashboard Building</div></div>
                                         </div>
                                         <div class="row row-cols-1 row-cols-md-3 mb-4">
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Email Marketing</div></div>
+                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Lead Gen</div></div>
+                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Lead Nurture</div></div>
+                                        </div>
+                                        <div class="row row-cols-1 row-cols-md-3">
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Problem Solving</div></div>
                                             <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Automation</div></div>
                                             <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">ETL</div></div>
-                                        </div>
-                                        <div class="row row-cols-1 row-cols-md-3">
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Sales</div></div>
-                                            <div class="col mb-4 mb-md-0"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Marketing</div></div>
-                                            <div class="col"><div class="d-flex align-items-center bg-light rounded-4 p-3 h-100">Project Management</div></div>
                                         </div>
                                     </div>
                                     <!-- Languages list-->
