Update DM Cruiser project image preview

--- a/projects.html
+++ b/projects.html
@@ -96,7 +96,7 @@
                                     style="text-decoration: none !important; color: inherit !important;" target="_blank"> -->
                                         <div class="d-flex align-items-center">
                                             <div class="p-5">
-                                                <h2 class="fw-bolder">Int'l Football Tournaments Interactive Dashboard</h2><br>
+                                                <h2 class="fw-bolder">Myth or Fact: Football's Home Advantage Explored</h2><br>
                                                 <p>→ Analyzed data from the past 100 years of major international football tournaments to assess the
                                                     impact of home advantage using <strong>Python and various data viz libraries</strong>.<br><br>
                                                     → Developed a <strong>live interactive dashboard</strong> for users to explore insights and interact with 
@@ -134,7 +134,7 @@
                                                     style="font-weight: bold;">GitHub Repo</a>
                                                 </p>
                                             </div>
-                                            <!-- <img class="img-fluid" src="assets/" alt="..." /> -->
+                                            <img class="img-fluid" src="assets/DM Cruiser Mockups_trimmer.png" alt="..." />
                                         </div>
                                     </a>
                                 </div>
