Update projects.html (typo fix)

--- a/projects.html
+++ b/projects.html
@@ -134,7 +134,7 @@
                                                     style="font-weight: bold;">GitHub Repo</a>
                                                 </p>
                                             </div>
-                                            <img class="img-fluid" src="assets/DM Cruiser Mockups_trimmer.png" alt="..." />
+                                            <img class="img-fluid" src="assets/DM Cruiser Mockups_trimmed.png" alt="..." />
                                         </div>
                                     </a>
                                 </div>
