added new excel project

--- a/projects.html
+++ b/projects.html
@@ -74,16 +74,17 @@
                                     style="text-decoration: none !important; color: inherit !important;" target="_blank"> -->
                                         <div class="d-flex align-items-center">
                                             <div class="p-5">
-                                                <h2 class="fw-bolder">CRM Sales Opportunities</h2><br>
-                                                <p>→ Conducted a comprehensive performance analysis of sales teams, identifying top performers and
-                                                    areas for improvement within a fictitious computer hardware company's <strong>B2B sales pipeline</strong> using
-                                                    <strong>Excel</strong>.<br><br>
-                                                    → Evaluated individual sales agent performance to pinpoint those lagging behind, providing actionable
-                                                    insights for targeted coaching and development.<br><br>
-                                                    → Analyzed quarter-over-quarter trends and product win rates to uncover key patterns, optimizing sales
-                                                    strategies and product focus.</p>
+                                                <h2 class="fw-bolder">Manufacturing Line Productivity</h2><br>
+                                                <p>→ Consolidated data from multiple <strong>excel</strong> sub-sheets using XLOOKUP, creating a 
+                                                    <strong>unified productivity dashboard</strong> for clearer operational insights.<br><br>
+                                                    → Analyzed production data with <strong>pivot tables</strong> to identify and rank downtime factors, 
+                                                    uncovering critical issues like machine failures and inventory shortages.<br><br>
+                                                    → Highlighted actionable areas for management, <strong>predicting a potential 20% improvement</strong> 
+                                                    in line efficiency if key downtime issues are addressed.<br><br>
+                                                    → Recommended targeted operator training to <strong>address specific inefficiencies</strong>, 
+                                                    aiming to <strong>optimize batch production and reduce downtime</strong>.</p>
                                             </div>
-                                            <!-- <img class="img-fluid" src="assets/" alt="..." /> -->
+                                            <img class="img-fluid" src="assets/manufacturing_drinks.jpg" alt="..." />
                                         </div>
                                     </a>
                                 </div>
