fixed excel project image issue

--- a/projects.html
+++ b/projects.html
@@ -84,7 +84,7 @@
                                                     → Recommended targeted operator training to <strong>address specific inefficiencies</strong>, 
                                                     aiming to <strong>optimize batch production and reduce downtime</strong>.</p>
                                             </div>
-                                            <img class="img-fluid" src="assets/manufacturing_drinks.jpg" alt="..." />
+                                            <img class="img-fluid" src="assets/manufacturing _drinks.jpg" alt="..." />
                                         </div>
                                     </a>
                                 </div>
